LiDi Hibernate Test adjustments